# neqo-qcsd

./: .gitattributes  .gitignore  Cargo.toml  README.md
data/: capture-850-25-keyed.pcapng  capture-850-25.csv  capture-850-25.pcapng  capture-850-5-keyed.pcapng  capture-850-5.csv  capture-850-5.pcapng  capture-baseline-keyed.pcapng  capture-baseline.csv  capture-baseline.pcapng  demoburst.csv  emptytrace.csv  nytimes.csv  pad-schedule-n2202-w1.txt  pad-trace-n2202-w1.csv  shaped-no-pad-mdframe.csv  shaped-no-pad.pcapng  shaped-no-padding.pcapng  vanilla-page.har  weather-page.har
neqo-client/: Cargo.toml
neqo-client-mp/: Cargo.toml
neqo-client-mp/src/: main.rs
neqo-client/src/: dependency_tracker.rs  main.rs  url_manager.rs
neqo-common/src/: log.rs
neqo-csdef/: Cargo.toml
neqo-csdef/src/: chaff_manager.rs  chaff_stream.rs  config.toml  defences.rs  dependency_tracker.rs  error.rs  events.rs  flow_shaper.rs  lib.rs  stream_id.rs  trace.rs
neqo-csdef/src/defences/: front.rs  mod.rs  shared_defence.rs  static_sched.rs  tamaraw.rs  traits.rs
neqo-csdef/src/event/: mod.rs  provider.rs
neqo-http3/: Cargo.toml
neqo-http3/src/: client_events.rs  connection.rs  connection_client.rs  hframe.rs  lib.rs  recv_message.rs
neqo-server/src/: main.rs
neqo-transport/: Cargo.toml
neqo-transport/src/: flow_mgr.rs  recv_stream.rs  send_stream.rs
python/: requirements.txt  tasks.py
python/notebooks/: browser-log-to-dependencies.ipynb  (+2 more)
tests/: Dockerfile  Makefile  README.md  collect-vanilla.sh  dep-graph.json  deps-sample.csv  plot-dummy.py  plot_dummy.py  request-macos.sh  request-vanilla.sh  start-macos.sh  start-vanilla.sh  tasks.py
(+23 files in other folders)
