[package]
name = "neqo-csdef"
version = "0.1.0"
authors = ["Jean-Pierre Smith <rougesprit@gmail.com>"]
edition = "2018"

[lib]
doctest = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
neqo-common = { path = "../neqo-common" }
log = {version = "0.4.0", default-features = false}
qlog = "0.3.0"
url = "1.7.2"
rand = "^0.5.5"
toml = "0.5.7"
serde = { version = "1.0", features = ["derive"] }