[package]
name = "neqo-http3"
version = "0.4.12"
authors = ["Dragana Damjanovic <dragana.damjano@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
neqo-common = { path = "./../neqo-common" }
neqo-crypto = { path = "./../neqo-crypto" }
neqo-transport = { path = "./../neqo-transport" }
neqo-qpack = { path = "./../neqo-qpack" }
neqo-csdef = { path = "./../neqo-csdef" }
log = {version = "0.4.0", default-features = false}
smallvec = "1.0.0"
qlog = "0.3.0"
url = "1.7.2"

[dev-dependencies]
test-fixture = { path = "../test-fixture" }

[features]
default = ["deny-warnings"]
deny-warnings = []
